[package]
name = "bbl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bblgen"
path = "bblgen/main.rs"

[[bin]]
name = "dumpast"
path = "dumpast/main.rs"

[lib]
name = "bbl"
path = "bbl/lib.rs"

[dependencies]
clang-sys = { path = "../clang-sys", features=["clang_13_0"] }
env_logger = "0.9.0"
hashbrown = "0.12.3"
log = "0.4.17"
