[package]
name = "bbl-bind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bbl-extract = { path = "../bbl-extract", version = "0.1.0" }
bbl-translate = { path = "../bbl-translate", version = "0.1.0" }
bbl-clang = { path = "../bbl-clang", version = "0.1.0" }
bbl-write = { path = "../bbl-write", version = "0.1.0" }
anyhow = "1.0.66"
clap = { version = "3.2.17", features = ["derive", "unstable-doc"] }
env_logger = "0.9.3"
log = "0.4.17"
thiserror = "1.0.37"
