[package]
name = "bbl-clang"
version = "0.1.0"
edition = "2021"
description = "High-level bindings to libclang"
license = "Apache-2.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>"]
repository = "https://github.com/vfx-rs/babble"

[dependencies]
clang-sys = {version = "1.3.3", features = ["clang_13_0"] }
ustr = "0.9.0"
env_logger = "0.9.0"
log = "0.4.17"
thiserror = "1.0.32"
backtrace = "0.3.66"
tracing = { version = "0.1.36", features = ["log", "log-always"] }
