[package]
name = "bbl-extract"
version = "0.1.0"
edition = "2021"

[lib]
name = "bbl_extract"
path = "src/lib.rs"

[dependencies]
bbl-clang = { path = "../bbl-clang", version = "0.1.0" }
clap = { version = "3.2.17", features = ["derive", "unstable-doc"] }
env_logger = "0.9.0"
hashbrown = "0.12.3"
levenshtein = "1.0.5"
log = "0.4.17"
thiserror = "1.0.32"
tracing = { version = "0.1.36", features = ["log", "log-always"] }
ustr = "0.9.0"
