[package]
name = "bbl-extract"
version = "0.1.0"
edition = "2021"
description = "Library to parse C++ code and extract a flattened AST representation from Clang's AST"
license = "Apache-2.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>"]
repository = "https://github.com/vfx-rs/babble"


[lib]
name = "bbl_extract"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.65"
backtrace = "0.3.66"
bbl-clang = { path = "../bbl-clang", version = "0.1.0" }
bbl-util = { path = "../bbl-util", version = "0.1.0" }
clap = { version = "3.2.17", features = ["derive", "unstable-doc"] }
colored = "2.0.0"
env_logger = "0.9.0"
hashbrown = "0.12.3"
indoc = "1.0.7"
levenshtein = "1.0.5"
log = "0.4.17"
regex = "1.6.0"
thiserror = "1.0.32"
tracing = { version = "0.1.36", features = ["log", "log-always"] }
ustr = "0.9.0"
