[package]
name = "bbl-gen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bbl-gen"
path = "src/main.rs"


[dependencies]
bbl-extract = {path="../bbl-extract", version="0.1.0"}
clap = { version = "3.2.17", features = ["derive", "unstable-doc"] }
env_logger = "0.9.0"
log = "0.4.17"
# ustr = "0.9.0"
# hashbrown = "0.12.3"
# levenshtein = "1.0.5"
