[package]
name = "bbl-scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bbl-clang = { path = "../bbl-clang", version = "0.1.0" }
bbl-util = { path = "../bbl-util", version = "0.1.0" }
anyhow = "1.0.66"
clap = { version = "3.2.17", features = ["derive", "unstable-doc"] }
env_logger = "0.9.3"
log = "0.4.17"
thiserror = "1.0.37"
walkdir = "2.3.2"
convert_case = "0.6.0"
