[package]
name = "bbl-translate"
version = "0.1.0"
edition = "2021"

[lib]
name = "bbl_translate"
path = "src/lib.rs"

[dependencies]
bbl-clang = {path="../bbl-clang", version="0.1.0"}
bbl-extract = {path="../bbl-extract", version="0.1.0"}
env_logger = "0.9.0"
hashbrown = "0.12.3"
levenshtein = "1.0.5"
log = "0.4.17"
ustr = "0.9.0"

