[package]
name = "bbl-translate"
version = "0.1.0"
edition = "2021"

[lib]
name = "bbl_translate"
path = "src/lib.rs"

[dependencies]
anyhow = {version = "1.0.62", features = ["backtrace"]}
bbl-clang = {path="../bbl-clang", version="0.1.0"}
bbl-extract = {path="../bbl-extract", version="0.1.0"}
env_logger = "0.9.0"
hashbrown = "0.12.3"
levenshtein = "1.0.5"
log = "0.4.17"
tracing = { version = "0.1.36", features = ["log", "log-always"] }
ustr = "0.9.0"

