[package]
name = "bbl-translate"
version = "0.1.0"
edition = "2021"
description = "Library to take the flattened AST from bbl-extract and translate it to an equivalent C represenation"
license = "Apache-2.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>"]
repository = "https://github.com/vfx-rs/babble"


[lib]
name = "bbl_translate"
path = "src/lib.rs"

[dependencies]
anyhow = {version = "1.0.62", features = ["backtrace"]}
bbl-clang = {path="../bbl-clang", version="0.1.0"}
bbl-extract = {path="../bbl-extract", version="0.1.0"}
env_logger = "0.9.0"
hashbrown = "0.12.3"
levenshtein = "1.0.5"
log = "0.4.17"
thiserror = "1.0.34"
tracing = { version = "0.1.36", features = ["std", "max_level_trace", "attributes", "log", "log-always"] }
ustr = "0.9.0"

