[package]
name = "bbl-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
env_logger = "0.9.1"
log = "0.4.17"
similar = "2.2.0"
tracing = { version = "0.1.36", features = [
    "std",
    "max_level_trace",
    "attributes",
    "log",
    "log-always",
] }
tracing-subscriber = { version = "0.3.15" }
opentelemetry = { version = "0.17.0", optional = true }
tracing-opentelemetry = { version = "0.17.4", optional = true }
opentelemetry-jaeger = { version = "0.16.0", optional = true }
colored = "2.0.0"
backtrace = "0.3.66"
