[package]
name = "bbl-write"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bbl-extract = { path = "../bbl-extract", version = "0.1.0" }
bbl-translate = { path = "../bbl-translate", version = "0.1.0" }
bbl-clang = { path = "../bbl-clang", version = "0.1.0" }
thiserror = "1.0.32"
env_logger = "0.9.0"
log = "0.4.17"
tracing = {version = "0.1.36", features = ["std", "max_level_trace", "attributes", "log"]}
tracing-subscriber = "0.3.15"
opentelemetry = "0.17.0"
tracing-opentelemetry = "0.17.4"
opentelemetry-jaeger = "0.16.0"
