[package]
name = "bbl-write"
version = "0.1.0"
edition = "2021"
description = "Library to take the C AST from bbl-translate and write it out as C and Rust FFI projects, then build them"
license = "Apache-2.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>"]
repository = "https://github.com/vfx-rs/babble"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
telemetry = ["opentelemetry", "tracing-opentelemetry", "opentelemetry-jaeger"]

[dependencies]
bbl-extract = { path = "../bbl-extract", version = "0.1.0" }
bbl-translate = { path = "../bbl-translate", version = "0.1.0" }
bbl-clang = { path = "../bbl-clang", version = "0.1.0" }
bbl-util = { path = "../bbl-util", version = "0.1.0" }
thiserror = "1.0.32"
env_logger = "0.9.0"
log = "0.4.17"
tracing = {version = "0.1.36", features = ["std", "max_level_trace", "attributes", "log", "log-always"]}
tracing-subscriber = { version = "0.3.15" }
opentelemetry = {version = "0.17.0", optional = true }
tracing-opentelemetry = {version = "0.17.4", optional = true }
opentelemetry-jaeger = {version = "0.16.0", optional = true }
indoc = "1.0.7"
petgraph = "0.6.2"
