[package]
name = "bbl"
version = "0.1.0"
edition = "2021"
description = "High-level frontend crate to babble"
license = "Apache-2.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>"]
repository = "https://github.com/vfx-rs/babble"

[dependencies]
bbl-extract = { path = "../bbl-extract", version = "0.1.0" }
bbl-translate = { path = "../bbl-translate", version = "0.1.0" }
bbl-clang = { path = "../bbl-clang", version = "0.1.0" }
bbl-write = { path = "../bbl-write", version = "0.1.0" }
thiserror = "1.0.34"
tracing = "0.1.36"
